<resources>
    <string name="app_name">游戏手柄模拟器(Beta)</string>
    <string name="choose_config">选择配置</string>
    <string name="add_config">添加配置</string>
    <string name="add_button">添加按钮</string>
    <string name="modify_config">修改配置</string>
    <string name="save_config">保存配置</string>
    <string name="tips">提示：数值只与屏幕像素有关</string>
    <string name="addButton">生成按钮</string>

    <string-array name="button_type_array">
<!--        圆形按钮-->
        <item>圆形</item>
<!--        方形按钮-->
        <item>方块</item>
    </string-array>

    <string-array name="key_array">
        <item>backspace</item>
        <item>ctrl</item>
        <item>space</item>
        <item>enter</item>
        <item>shift</item>
        <item>caps</item>
        <item>tab</item>
        <item>up</item>
        <item>down</item>
        <item>left</item>
        <item>right</item>
        <item>esc</item>
        <item>f1</item>
        <item>f2</item>
        <item>f3</item>
        <item>f4</item>
        <item>f5</item>
        <item>f6</item>
        <item>f7</item>
        <item>f8</item>
        <item>f9</item>
        <item>f10</item>
        <item>f11</item>
        <item>f12</item>
        <item>~</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
        <item>.</item>
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>
</resources>
