<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/homeTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/currentConfig"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="当前配置：默认"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/choose_config"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/add_config"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addButton"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/add_button"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/modifconfig"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/modify_config"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/save_config"
                        android:textAlignment="center" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/key"
                        android:layout_alignParentStart="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/keyText"
                            android:text="值："
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"/>
                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/keyValue"
                            android:entries="@array/key_array"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <EditText
                        android:layout_below="@id/key"
                        android:id="@+id/x"
                        android:hint="X:"
                        android:digits="1234567890."
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_below="@id/x"
                        android:id="@+id/y"
                        android:hint="Y:"
                        android:digits="1234567890."
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/home"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_shape">

        </RelativeLayout>

    </com.daimajia.swipe.SwipeLayout>

</LinearLayout>